# cw_parsing_database

./: .gitignore  README.md  config.py  main.py  pyproject.toml
src/: db_manager.py  queries.sql  utils.py
