[tool.poetry]
name = "cw-parsing-database"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "cw_parsing_database"}]

[tool.poetry.dependencies]
python = "^3.11"
config = "^0.5.1"
psycopg2 = "^2.9.6"
requests = "^2.31.0"
params = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
